Switch from venv env vars to .env referencing, update .gitignore, and README

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,10 @@ ENV/
 traces/
 *.jsonl
 
-# Environment variables
+# Environment variables (keep secrets local)
 .env
 .env.local
+.env.*
 
 # IDE
 .vscode/
