--- a/config.json
+++ b/config.json
@@ -7,6 +7,8 @@
   "max_time_sec": null,
   "trace_path": "traces/run.jsonl",
   "use_stub": false,
+  "policy_type": "short_context",
+  "reasoning_mode": "controller",
   "context": {
     "scaffold": "You are playing a word guessing game called Semantle. Your goal is to guess a target word by receiving similarity scores. Higher scores (closer to 100) mean you're closer to the target word. Use the feedback from previous guesses to make better guesses. Respond with just a single word guess, or a JSON object with a 'guess' key containing your word.",
     "memory": [],
@@ -14,6 +16,25 @@
       "enabled": false,
       "tools": []
     }
+  },
+  "context_policies": {
+    "short_context": {
+      "max_retrieved_chunks": 3,
+      "chunk_char_limit": 600,
+      "summary_char_limit": 400
+    },
+    "long_context": {
+      "max_retrieved_chunks": 12,
+      "chunk_char_limit": 1200,
+      "summary_char_limit": 800
+    }
+  },
+  "agentic": {
+    "max_steps": 4,
+    "model": "gpt-4o-mini",
+    "temperature": 0.1,
+    "max_tokens": 350,
+    "result_schema": "Return JSON with keys 'answer' and 'proposal'. The proposal must be a JSON object containing numeric hyperparameters."
   },
   "task": {
     "type": "semantle",
